--- a/public/css/style.css
+++ b/public/css/style.css
@@ -86,6 +86,7 @@ h5 {
     .recipe .show-ingredients #ingredients-list {
       display: list-item;
       list-style-type: circle;
+      text-transform: capitalize;
       margin-left: 20px;
       font-size: 15px; }
   .recipe .show-method {
@@ -96,6 +97,10 @@ h5 {
   .likes #like {
     font-size: 20px;
     margin-left: 10px; }
+  .likes #likers {
+    font-size: 12px;
+    margin-left: 5px;
+    line-height: 0; }
   .likes .like-button {
     display: block;
     margin: 10px auto 0 0;
@@ -113,6 +118,13 @@ h5 {
       transform: scale(1.1); }
     .likes .like-button .fa {
       margin-right: 5px; }
+
+.show-buttons {
+  display: inline-flex;
+  margin-top: 20px; }
+  .show-buttons .button {
+    margin-right: 20px;
+    font-size: 10px; }
 
 .show-comments {
   margin-top: 10px; }
@@ -151,12 +163,6 @@ h5 {
     padding: 10px; }
   .show-comments #comment-input .button {
     margin-top: 10px; }
-
-.show-buttons {
-  display: inline-flex;
-  margin-top: 20px; }
-  .show-buttons .button {
-    margin-right: 20px; }
 
 #submit {
   margin-top: 10px; }
